# color-code-stim

./: .gitignore  404.html  CLAUDE.md  LICENSE  README.md  color_code_stim.py  debug_comparative_decoding.py  debug_comparative_parity.py  debug_dem_decomposition.py  debug_exception_trace.py  getting_started.ipynb  index.html  memo.md  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml  test_import.py  todo.md  tox.ini
.github/workflows/: release.yml
api/circuit_builder/: index.html
api/color_code/: index.html
api/noise_model/: index.html
color_code_stim/: __init__.py  color_code_stim.py
docs/: MIGRATION_STRATEGY.md  index.md
memos/: sdqc_circuit.md
notebooks/: cult_growing.ipynb  cult_growing_plotting.ipynb  erasure_matcher_predecoding.ipynb  getting_started_dev.ipynb  migration_test.ipynb  playground.ipynb  sdqc.ipynb  stability_bug_test.ipynb
search/: search_index.json
src/: __init__.py
test/: test_get_final_predictions.py
tests/: cult+growing.html  test_adjust_cultivation_circuit_coords.py  test_annotate_detectors_before_tick.py  test_circuit_builder.py  test_circuit_generation_simulation.py  test_cultivation_circuit.ipynb  test_dem_symbolic_compress.py  test_get_final_predictions.py  test_get_observable_matrix_from_dem.py  test_graph_builder.py  test_initial_data_qubit_depol_integration.py  test_isolate_final_mpps.py  test_map_errors_to_org_dem.py  test_noise_model.py  test_noise_model_integration.py  test_obtaining_erasure_checker_predecoding_outcome.py  test_reorder_qubits_in_circuit.py  test_separate_depolarizing_errors.py
(+81 files in other folders)
